# asteroids_bevy

./: Cargo.toml
src/: assets.rs  main.rs  schedule.rs  settings.rs
src/asteroid/: components.rs  mod.rs  spawn.rs  systems.rs
src/bullet/: components.rs  mod.rs  systems.rs
src/collision/: events.rs  handlers.rs  mod.rs
src/components/: asteroid.rs  explosion.rs  input.rs  invulnerability_timer.rs  lifetime.rs  mod.rs  movement.rs  physics.rs  sprite_animation.rs
src/entities/: asteroid.rs  bullet.rs  mod.rs
src/events/: collision.rs
src/fx/: mod.rs
src/physics/: mod.rs
src/player/: components.rs  mod.rs  systems.rs
src/plugins/: animation_plugin.rs  asset_plugin.rs  asteroid_plugin.rs  camera_plugin.rs  collision_plugin.rs  game_plugin_group.rs  game_schedule_plugin.rs  global_input_plugin.rs  mod.rs  physics_plugin.rs  player_plugin.rs  screen_wrap_plugin.rs  settings_plugin.rs
src/resources/: asteroid_settings.rs  asteroid_spawn_timer.rs  bullet_settings.rs  explosion_settings.rs  game_textures.rs  mod.rs  player_settings.rs  world_settings.rs
src/startup/: asteroids.rs  camera.rs  mod.rs  player.rs  textures.rs
src/systems/: animate_sprite.rs  asteroid_spawner.rs  collision.rs  input.rs  invulnerability.rs  lifetime.rs  mod.rs  physics.rs  wrapping.rs
src/world/: mod.rs  systems.rs
