[package]
name = "Asteroids"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.1"
rand = "0.10"

# Enable high optimizations for dependencies but not for your code
[profile.dev.package."*"]
opt-level = 3

# (Optional) Slight optimization for your own code if your game lags in debug mode
[profile.dev]
opt-level = 1
